fix(server): correct threading issus with simulator

--- a/client/notebook.ipynb
+++ b/client/notebook.ipynb
@@ -10,15 +10,15 @@
     "from importlib import reload\n",
     "\n",
     "newSpeeds = {\n",
-    "    'speed_left': '0.3',\n",
-    "    'speed_right': '0.5',\n",
+    "    'speed_left': 0.3,\n",
+    "    'speed_right': 0.5,\n",
     "    'epuck': 1\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [200]>"
+       "<Response [405]>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
