clean(client & server): remove useless lines and add few comments

--- a/client/notebook.ipynb
+++ b/client/notebook.ipynb
@@ -2,23 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requester\n",
-    "from importlib import reload\n",
-    "\n",
-    "newSpeeds = {\n",
-    "    'speed_left': 0.3,\n",
-    "    'speed_right': 0.5,\n",
-    "    'epuck': 1\n",
-    "}"
+    "import requester"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -27,36 +20,33 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reload(requester)\n",
-    "\n",
     "requester.start_simulator()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [405]>"
+       "<Response [200]>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reload(requester)\n",
-    "\n",
+    "newSpeeds = { 'speed': 0.0 }\n",
     "requester.set_speed(newSpeeds)"
    ]
   }
