feat(server & client): choose nb of agent at start and manage speed,direction for each agent from notebook

--- a/client/notebook.ipynb
+++ b/client/notebook.ipynb
@@ -2,16 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requester"
+    "import requester\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'requester' from 'd:\\\\Github\\\\projet_semestriel\\\\simple-playgrounds-epuck\\\\client\\\\requester.py'>"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from importlib import reload\n",
+    "reload(requester)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -20,35 +42,57 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "requester.start_simulator()"
+    "requester.start_simulator(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['agent_0', 'agent_1', 'agent_2']\n"
+     ]
     }
    ],
    "source": [
-    "newSpeeds = { 'speed': 0.0 }\n",
-    "requester.set_speed(newSpeeds)"
+    "names = requester.get_agents_name()['names']\n",
+    "print(names)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _ in range(10):\n",
+    "    for agent in names:\n",
+    "        requester.set_speed(agent, { 'left': 0.4, 'right':0.4 })\n",
+    "    time.sleep(1.2)\n",
+    "    for agent in names:\n",
+    "        requester.set_speed(agent, { 'left': 0, 'right':0.5 })\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "for agent in names:\n",
+    "    requester.set_speed(agent, {'left': 0, 'right': 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
