feat(server&client): fix issue with simulator not showing

--- a/client/notebook.ipynb
+++ b/client/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'requester' from 'd:\\\\Github\\\\projet_semestriel\\\\simple-playgrounds-epuck\\\\client\\\\requester.py'>"
+       "<module 'requester' from '/Users/jalalizekki/enseirb/ps/simple-playgrounds-epuck/client/requester.py'>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,34 +33,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "requester.start_simulator(nb_agent = 3, sensor=\"proximiter\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['agent_0', 'agent_1', 'agent_2']\n"
+      "http://127.0.0.1:5000/open-session\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requester.start_simulator(nb_agent = 1, sensor=\"proximiter\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['epuck__0']\n"
      ]
     }
    ],
@@ -71,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -80,20 +87,62 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "requester.set_speed(\"agent_0\", { 'left': 0, 'right': 0 })"
+    "requester.set_speed(\n",
+    "    {\n",
+    "        \"agent_id\": \"epuck__0\",\n",
+    "        \"new_speeds\": [0.2, 0.2] \n",
+    "    }\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requester.set_speed(\n",
+    "    {\n",
+    "        \"agent_id\": \"epuck__0\",\n",
+    "        \"new_speeds\": [0., 0.] \n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "set_speed() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/gb/2s6lzrk946q_0xb3w6vwss9w0000gn/T/ipykernel_13548/2695000970.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0magent\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0mrequester\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_speed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0magent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m \u001b[0;34m'left'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m0.4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'right'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m0.4\u001b[0m \u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0magent\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: set_speed() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
    "source": [
     "for _ in range(10):\n",
     "    for agent in names:\n",
@@ -109,36 +158,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [500]>"
+       "<Response [404]>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "requester.get_agent_by_name('agent_0')"
+    "requester.get_agent_by_name('epuck__0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'agent_0', 'position': [[75.59295290567542, 576.1449576205658], 2.940855061805327], 'rotation': -7.714339910630254e-132, 'sensors': ['semanticcones_0'], 'velocity': [7.061581069521734e-06, 6.678598070495955e-26]}\n",
-      "{'name': 'agent_1', 'position': [[117.81241742165582, 332.04480418044216], 2.324904245619699], 'rotation': 0.0, 'sensors': ['semanticcones_1'], 'velocity': [0.0, 0.0]}\n",
-      "{'name': 'agent_2', 'position': [[446.2388879278302, 129.24383999200793], 1.5936387799014344], 'rotation': 0.0, 'sensors': ['semanticcones_2'], 'velocity': [0.0, 0.0]}\n"
+      "<Response [404]>\n"
      ]
     }
    ],
@@ -279,9 +326,9 @@
    "hash": "89124528f2f2854d7659cc18f381e07dff1d8eb448314010dc92b6a376f742f2"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('semes': conda)",
+   "display_name": "PyCharm (simple-playgrounds-epuck)",
    "language": "python",
-   "name": "python3"
+   "name": "pycharm-6cf1aee8"
   },
   "language_info": {
    "codemirror_mode": {
@@ -294,8 +341,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
