--- a/client/new-notebook.ipynb
+++ b/client/new-notebook.ipynb
@@ -2,25 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n# Used only for Dev\\n\\nimport simulator, agent, simulator_interface, behavior\\nfrom importlib import reload\\nreload(simulator)\\nreload(behavior)\\nreload(simulator_interface)\\nreload(agent)\\n\\n'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "# Used only for Dev\n",
@@ -37,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -46,18 +35,13 @@
    },
    "outputs": [],
    "source": [
-    "# debug\n",
-    "import simulator_interface\n",
-    "from importlib import reload\n",
-    "reload(simulator_interface)\n",
-    "\n",
     "from simulator_interface import open_session, close_session\n",
     "simulator, epuck1, epuck2 = open_session(nb_agents=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -68,8 +52,8 @@
    "source": [
     "epuck1.wait(3)\n",
     "\n",
-    "epuck1.left_spd = 3\n",
-    "epuck1.right_spd = 3\n",
+    "epuck1.left_spd = -5\n",
+    "epuck1.right_spd = -6\n",
     "\n",
     "epuck1.wait(3)\n",
     "\n",
@@ -81,44 +65,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def obstacle_avoidance(robot):\n",
-    "    left, right = robot.prox_activations(tracked_objects=[\"20cm\", \"Tree\", \"Cup\"])\n",
-    "    left_wheel = 1 - right.get('dist', 0)\n",
-    "    right_wheel = 1 - left.get('dist', 0) \n",
+    "    sensors = robot.prox_activations()\n",
+    "    right = sensors['right'].get('dist', 1)\n",
+    "    left = sensors['left'].get('dist', 1)\n",
+    "    left_wheel =  right * robot.max_speed\n",
+    "    right_wheel =  left * robot.max_speed\n",
+    "    # print('\\r', left, '\\t' ,right, '\\t', left_wheel, '\\t', right_wheel, \" \"*100, end=\"\")\n",
     "    return left_wheel, right_wheel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Behavior' object has no attribute 'execute'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3352/2041402995.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mepuck1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mattach_behavior\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobstacle_avoidance\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfreq\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mepuck1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart_behavior\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobstacle_avoidance\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32md:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\agent.py\u001b[0m in \u001b[0;36mstart_behavior\u001b[1;34m(self, callback)\u001b[0m\n\u001b[0;32m    134\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    135\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mstart_behavior\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcallback\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 136\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_start\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_behaviors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcallback\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    137\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_behavior_mixer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_executed\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    138\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_behavior_mixer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32md:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\agent.py\u001b[0m in \u001b[0;36m_start\u001b[1;34m(self, dictionary, callback)\u001b[0m\n\u001b[0;32m     76\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 78\u001b[1;33m             \u001b[0mdictionary\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcallback\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     79\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Behavior' object has no attribute 'execute'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Behavior obstacle_avoidance started\n",
+      " 1 \t 1 \t 10.0 \t 10.0                                                                                                                                                                  "
      ]
     }
    ],
    "source": [
-    "epuck1.attach_behavior(obstacle_avoidance, freq=10)\n",
+    "epuck1.detach_all_behaviors()\n",
+    "epuck1.attach_behavior(obstacle_avoidance, freq=1)\n",
     "epuck1.start_behavior(obstacle_avoidance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Behavior obstacle_avoidance stopped\n"
+     ]
+    }
+   ],
+   "source": [
+    "epuck1.stop_behavior(obstacle_avoidance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "pycharm": {
