feat(api): rename routes and add simulator status to client

--- a/client/new-notebook.ipynb
+++ b/client/new-notebook.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -41,7 +41,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'running'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simulator.status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -52,8 +72,8 @@
    "source": [
     "epuck1.wait(3)\n",
     "\n",
-    "epuck1.left_spd = -5\n",
-    "epuck1.right_spd = -6\n",
+    "epuck1.left_spd = 3\n",
+    "epuck1.right_spd = 3\n",
     "\n",
     "epuck1.wait(3)\n",
     "\n",
@@ -65,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,15 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Behavior obstacle_avoidance started\n",
-      " 1 \t 1 \t 10.0 \t 10.0                                                                                                                                                                  "
+      "Behavior obstacle_avoidance started\n"
      ]
     }
    ],
@@ -101,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -113,12 +132,14 @@
     }
    ],
    "source": [
-    "epuck1.stop_behavior(obstacle_avoidance)"
+    "epuck1.stop_behavior(obstacle_avoidance)\n",
+    "epuck1.left_spd = 0\n",
+    "epuck2.right_spd = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
