--- a/client/new-notebook.ipynb
+++ b/client/new-notebook.ipynb
@@ -2,9 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -12,7 +11,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "# Used only for Dev\n",
+    "#Used only for Dev\n",
     "\n",
     "import simulator, agent, simulator_interface, behavior\n",
     "from importlib import reload\n",
@@ -20,15 +19,13 @@
     "reload(behavior)\n",
     "reload(simulator_interface)\n",
     "reload(agent)\n",
-    "\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -41,16 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'running'"
-      ]
+      "text/plain": "'running'"
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,9 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -85,23 +79,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.9771089275127539, 0.9771089275127539]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(epuck1.prox_activations())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def obstacle_avoidance(robot):\n",
-    "    sensors = robot.prox_activations()\n",
-    "    right = sensors['right'].get('dist', 1)\n",
-    "    left = sensors['left'].get('dist', 1)\n",
-    "    left_wheel =  right * robot.max_speed\n",
-    "    right_wheel =  left * robot.max_speed\n",
+    "    left, right = robot.prox_activations()\n",
     "    # print('\\r', left, '\\t' ,right, '\\t', left_wheel, '\\t', right_wheel, \" \"*100, end=\"\")\n",
-    "    return left_wheel, right_wheel"
+    "    return right, left"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -133,15 +145,13 @@
    ],
    "source": [
     "epuck1.stop_behavior(obstacle_avoidance)\n",
-    "epuck1.left_spd = 0\n",
-    "epuck2.right_spd = 0"
+    "epuck1.stop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -154,7 +164,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -168,9 +178,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
